--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,16 @@
+.board {
+}
+
 .board .row {
-  height: 52px;
+  height: 30px;
+  white-space: nowrap;
 }
 
 .board .square {
   display: inline-block;
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
+  box-sizing: border-box;
 
   border-width: 1px;
   border-style: solid;
