Lots of little changes - tinkering all evening
- Use a wacky overlay system to make the ghost piece look more ghostly
- Totally rewrite the boundary checking code
- Start working on a visual indicator for whether or not the ghost piece
  is valid. This doesn't work very well yet or look good.

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .board {
-  background-color: black;
+  background-color: darkslategrey;
   display: inline-block;
 }
 
@@ -18,4 +18,10 @@
   border-width: 0px;
 
   background-color: white;
+}
+
+.board .overlay {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
 }
